syntax = "proto3";
package order.v1;

import "google/api/http.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service OrderService {
  rpc create(OrderCreateRequest) returns (OrderCreateResponse){
    option (google.api.http) = {
      post: "/api/v1/order/",
      body: "*"
    };
  }
  rpc cancel(OrderCancelRequest) returns (OrderCancelResponse) {
    option (google.api.http) = {
      delete: "/api/v1/order/{id}"
    };
  }
  rpc find(OrderFindRequest) returns (OrderFindResponse) {
    option (google.api.http) = {
      get: "/api/v1/order/find",
      body: "*"
    };
  }
}

message OrderCreateRequest {

}

message OrderCreateResponse {

}

message OrderCancelRequest {

}

message OrderCancelResponse {

}

message OrderFindRequest {

}

message OrderFindResponse {

}